--- a/index.html
+++ b/index.html
@@ -6,6 +6,19 @@
     <title>flashcard</title>
 </head>
 <body>
-    
+    <main>
+<section id="container">
+    <article class="cartao">
+        <div class="cartao__conteudo">
+            <h3>ciências</h3>
+            <div class="cartao__conteudo__pergunta"></div>
+               Qual gás as plantas utilizam para a fotossíntese?
+        </div>
+    </article>
+</section>
+    </main>
+    <footer>
+        <p>Projeto desenvolvido por Kamyla e Priscila</p>
+    </footer>
 </body>
 </html>
