--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
             <div class="cartao__conteudo__pergunta"></div>
                Qual gás as plantas utilizam para a fotossíntese?
         </div>
+        <div class="cartao__conteudo__resposta"></div>
     </article>
 </section>
     </main>
