--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
                Qual gás as plantas utilizam para a fotossíntese?
         </div>
         <div class="cartao__conteudo__resposta"></div>
+        Gás carbônico
     </article>
 </section>
     </main>
