--- a/index.html
+++ b/index.html
@@ -13,9 +13,21 @@
             <h3>ciências</h3>
             <div class="cartao__conteudo__pergunta"></div>
                Qual gás as plantas utilizam para a fotossíntese?
-        </div>
+               <div/>
         <div class="cartao__conteudo__resposta"></div>
         Gás carbônico
+        <div/>
+        <div/>
+        <article class="cartao">
+            <div class="cartao__conteudo">
+                <h3>ciências</h3>
+                <div class="cartao__conteudo__pergunta"></div>
+                   O que é DNA?
+                   <div/>
+            <div class="cartao__conteudo__resposta"></div>
+            Molécula que armazena informações genéticas
+            <div/>
+            <div/>
     </article>
 </section>
     </main>
