--- a/index.html
+++ b/index.html
@@ -13,20 +13,20 @@
         <div class="cartao__conteudo">
             <h3>ciências</h3>
             <div class="cartao__conteudo__pergunta"></div>
-               Qual gás as plantas utilizam para a fotossíntese?
+              <p> Qual gás as plantas utilizam para a fotossíntese?</p>
                <div/>
         <div class="cartao__conteudo__resposta"></div>
-        Gás carbônico
+        <p>Gás carbônico</p>
         <div/>
         <div/>
         <article class="cartao">
             <div class="cartao__conteudo">
                 <h3>ciências</h3>
                 <div class="cartao__conteudo__pergunta"></div>
-                   O que é DNA?
+                  <p> O que é DNA?</p>
                    <div/>
             <div class="cartao__conteudo__resposta"></div>
-            Molécula que armazena informações genéticas
+           <p> Molécula que armazena informações genéticas</p>
             <div/>
             <div/>
     </article>
