--- a/index.html
+++ b/index.html
@@ -1,34 +1,36 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <link rel="stylesheet" href="assets/style.css">
     <title>flashcard</title>
 </head>
+
 <body>
     <main>
 <section id="container">
     <article class="cartao">
         <div class="cartao__conteudo">
             <h3>ciências</h3>
-            <div class="cartao__conteudo__pergunta"></div>
+            <div class="cartao__conteudo__pergunta">
               <p> Qual gás as plantas utilizam para a fotossíntese?</p>
-               <div/>
-        <div class="cartao__conteudo__resposta"></div>
+        </div>
+        <div class="cartao__conteudo__resposta">
         <p>Gás carbônico</p>
-        <div/>
-        <div/>
+    </div>
+</div>
         <article class="cartao">
             <div class="cartao__conteudo">
                 <h3>ciências</h3>
-                <div class="cartao__conteudo__pergunta"></div>
+                <div class="cartao__conteudo__pergunta">
                   <p> O que é DNA?</p>
                    <div/>
-            <div class="cartao__conteudo__resposta"></div>
+            <div class="cartao__conteudo__resposta">
            <p> Molécula que armazena informações genéticas</p>
-            <div/>
-            <div/>
+            </div>
+            </div>
     </article>
 </section>
     </main>
