--- a/index.html
+++ b/index.html
@@ -21,6 +21,19 @@
         <p>Gás carbônico</p>
     </div>
 </div>
+    </article>
+        <article class="cartao">
+            <div class="cartao__conteudo">
+                <h3>ciências</h3>
+                <div class="cartao__conteudo__pergunta">
+                  <p> O que é DNA?</p>
+                   <div/>
+            <div class="cartao__conteudo__resposta">
+           <p> Molécula que armazena informações genéticas</p>
+            </div>
+            </div>
+    </article>
+    </article>
         <article class="cartao">
             <div class="cartao__conteudo">
                 <h3>ciências</h3>
