--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
             <div class="cartao__conteudo">
                 <h3>ciências</h3>
                 <div class="cartao__conteudo__pergunta">
-                  <p> O que é DNA?</p>
+                  <p> O que é um ano bissexto?</p>
                    <div/>
             <div class="cartao__conteudo__resposta">
-           <p> Molécula que armazena informações genéticas</p>
+           <p> ano com 366 dias</p>
             </div>
             </div>
     </article>
