--- a/index.html
+++ b/index.html
@@ -27,19 +27,19 @@
                 <h3>ciências</h3>
                 <div class="cartao__conteudo__pergunta">
                   <p> O que é DNA?</p>
-                   <div/>
+                   </div>
             <div class="cartao__conteudo__resposta">
            <p> Molécula que armazena informações genéticas</p>
             </div>
             </div>
     </article>
-    </article>
+
         <article class="cartao">
             <div class="cartao__conteudo">
                 <h3>ciências</h3>
                 <div class="cartao__conteudo__pergunta">
                   <p> O que é um ano bissexto?</p>
-                   <div/>
+                </div>
             <div class="cartao__conteudo__resposta">
            <p> ano com 366 dias</p>
             </div>
