--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                   <p> O que é um ano bissexto?</p>
                 </div>
             <div class="cartao__conteudo__resposta">
-           <p> ano com 366 dias</p>
+           <p> Ano com 366 dias</p>
             </div>
             </div>
     </article>
