--- a/index.html
+++ b/index.html
@@ -4,51 +4,54 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <link rel="stylesheet" href="assets/style.css">
-    <title>flashcard</title>
+    <link rel="stylesheet" href="assets/style.css">
+    <title>Flashcard</title>
 </head>
 
 <body>
     <main>
-<section id="container">
-    <article class="cartao">
-        <div class="cartao__conteudo">
-            <h3>ciências</h3>
-            <div class="cartao__conteudo__pergunta">
-              <p> Qual gás as plantas utilizam para a fotossíntese?</p>
-        </div>
-        <div class="cartao__conteudo__resposta">
-        <p>Gás carbônico</p>
-    </div>
-</div>
-    </article>
-        <article class="cartao">
-            <div class="cartao__conteudo">
-                <h3>ciências</h3>
-                <div class="cartao__conteudo__pergunta">
-                  <p> O que é DNA?</p>
-                   </div>
-            <div class="cartao__conteudo__resposta">
-           <p> Molécula que armazena informações genéticas</p>
-            </div>
-            </div>
-    </article>
-
-        <article class="cartao">
-            <div class="cartao__conteudo">
-                <h3>ciências</h3>
-                <div class="cartao__conteudo__pergunta">
-                  <p> O que é um ano bissexto?</p>
+        <section id="container">
+            <article class="cartao">
+                <div class="cartao__conteudo">
+                    <h3>Ciências</h3>
+                    <div class="cartao__conteudo__pergunta">
+                        <p>Qual gás as plantas utilizam para a fotossíntese?</p>
+                    </div>
+                    <div class="cartao__conteudo__resposta">
+                        <p>Gás carbônico</p>
+                    </div>
                 </div>
-            <div class="cartao__conteudo__resposta">
-           <p> Ano com 366 dias</p>
-            </div>
-            </div>
-    </article>
-</section>
+            </article>
+
+            <article class="cartao">
+                <div class="cartao__conteudo">
+                    <h3>Ciências</h3>
+                    <div class="cartao__conteudo__pergunta">
+                        <p>O que é DNA?</p>
+                    </div>
+                    <div class="cartao__conteudo__resposta">
+                        <p>Molécula que armazena informações genéticas</p>
+                    </div>
+                </div>
+            </article>
+
+            <article class="cartao">
+                <div class="cartao__conteudo">
+                    <h3>Ciências</h3>
+                    <div class="cartao__conteudo__pergunta">
+                        <p>O que é um ano bissexto?</p>
+                    </div>
+                    <div class="cartao__conteudo__resposta">
+                        <p>Ano com 366 dias</p>
+                    </div>
+                </div>
+            </article>
+        </section>
     </main>
+
     <footer>
         <p>Projeto desenvolvido por Kamyla e Priscila</p>
     </footer>
 </body>
+
 </html>
