--- a/index.html
+++ b/index.html
@@ -22,7 +22,18 @@
                     </div>
                 </div>
             </article>
-
+<section id="container">
+            <article class="cartao">
+                <div class="cartao__conteudo">
+                    <h3>Geogrfia</h3>
+                    <div class="cartao__conteudo__pergunta">
+                        <p>Qual a capital de Portugal?</p>
+                    </div>
+                    <div class="cartao__conteudo__resposta">
+                        <p>Gás carbônico</p>
+                    </div>
+                </div>
+            </article>
             <article class="cartao">
                 <div class="cartao__conteudo">
                     <h3>Ciências</h3>
