--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                         <p>Qual a capital de Portugal?</p>
                     </div>
                     <div class="cartao__conteudo__resposta">
-                        <p>Gás carbônico</p>
+                        <p>liboa</p>
                     </div>
                 </div>
             </article>
