--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <div class="cartao__conteudo">
                     <h3>Ciências</h3>
                     <div class="cartao__conteudo__pergunta">
-                        <p>Qual gás as plantas utilizam para a fotossíntese?</p>
+                        <p>Qual é a estação mais quente?</p>
                     </div>
                     <div class="cartao__conteudo__resposta">
                         <p>Gás carbônico</p>
