--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                         <p>Qual é a estação mais quente?</p>
                     </div>
                     <div class="cartao__conteudo__resposta">
-                        <p>Gás carbônico</p>
+                        <p>Verão</p>
                     </div>
                 </div>
             </article>
