--- a/index.html
+++ b/index.html
@@ -21,19 +21,18 @@
                         <p>Verão</p>
                     </div>
                 </div>
-            </article>
-<section id="container">
-            <article class="cartao">
+                 </article>
+           <article class="cartao">
                 <div class="cartao__conteudo">
                     <h3>Geogrfia</h3>
                     <div class="cartao__conteudo__pergunta">
-                        <p>Qual a capital de Portugal?</p>
+                        <p>Qual é a estação mais quente?</p>
                     </div>
                     <div class="cartao__conteudo__resposta">
-                        <p>liboa</p>
+                        <p>Verão</p>
                     </div>
                 </div>
-            </article>
+                 </article>
             <article class="cartao">
                 <div class="cartao__conteudo">
                     <h3>Ciências</h3>
