--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
                 <div class="cartao__conteudo">
                     <h3>Geogrfia</h3>
                     <div class="cartao__conteudo__pergunta">
-                        <p>Qual é a estação mais quente?</p>
+                        <p>Qual é a CAPITAL DE Portugal?</p>
                     </div>
                     <div class="cartao__conteudo__resposta">
-                        <p>Verão</p>
+                        <p>Lisboa</p>
                     </div>
                 </div>
                  </article>
