--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
                  </article>
            <article class="cartao">
                 <div class="cartao__conteudo">
-                    <h3>Geogrfia</h3>
+                    <h3>Geografia</h3>
                     <div class="cartao__conteudo__pergunta">
-                        <p>Qual é a CAPITAL DE Portugal?</p>
+                        <p>Qual é a capital de Portugal?</p>
                     </div>
                     <div class="cartao__conteudo__resposta">
                         <p>Lisboa</p>
