--- a/index.html
+++ b/index.html
@@ -22,6 +22,17 @@
                     </div>
                 </div>
                  </article>
+                 <article class="cartao">
+                <div class="cartao__conteudo">
+                    <h3>Ciências</h3>
+                    <div class="cartao__conteudo__pergunta">
+                        <p>Qual é a capital de Paris?</p>
+                    </div>
+                    <div class="cartao__conteudo__resposta">
+                        <p>França</p>
+                    </div>
+                </div>
+                 </article>
            <article class="cartao">
                 <div class="cartao__conteudo">
                     <h3>Geografia</h3>
