--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                  </article>
                  <article class="cartao">
                 <div class="cartao__conteudo">
-                    <h3>Geografia/h3>
+                    <h3>Geografia</h3>
                     <div class="cartao__conteudo__pergunta">
                         <p>Qual é a capital de Paris?</p>
                     </div>
