--- a/index.html
+++ b/index.html
@@ -68,6 +68,17 @@
                     </div>
                 </div>
             </article>
+             <article class="cartao">
+                <div class="cartao__conteudo">
+                    <h3>Geografia</h3>
+                    <div class="cartao__conteudo__pergunta">
+                        <p>Qual a capital da Bélgica</p>
+                    </div>
+                    <div class="cartao__conteudo__resposta">
+                        <p>Bruxelas</p>
+                    </div>
+                </div>
+            </article>
         </section>
     </main>
 
