--- a/index.html
+++ b/index.html
@@ -23,68 +23,14 @@
                 </div>
                  </article>
                  
-           <article class="cartao">
-                <div class="cartao__conteudo">
-                    <h3>Geografia</h3>
-                    <div class="cartao__conteudo__pergunta">
-                        <p>Qual é a capital de Portugal?</p>
-                    </div>
-                    <div class="cartao__conteudo__resposta">
-                        <p>Lisboa</p>
-                    </div>
-                </div>
-                 </article>
-            <article class="cartao">
-                <div class="cartao__conteudo">
-                    <h3>Ciências</h3>
-                    <div class="cartao__conteudo__pergunta">
-                        <p>O que é DNA?</p>
-                    </div>
-                    <div class="cartao__conteudo__resposta">
-                        <p>Molécula que armazena informações genéticas</p>
-                    </div>
-                </div>
-            </article>
-
-            <article class="cartao">
-                <div class="cartao__conteudo">
-                    <h3>Ciências</h3>
-                    <div class="cartao__conteudo__pergunta">
-                        <p>O que é um ano bissexto?</p>
-                    </div>
-                    <div class="cartao__conteudo__resposta">
-                        <p>Ano com 366 dias</p>
-                    </div>
-                </div>
-            </article>
-             <article class="cartao">
-                <div class="cartao__conteudo">
-                    <h3>Geografia</h3>
-                    <div class="cartao__conteudo__pergunta">
-                        <p>Qual a capital da França?</p>
-                    </div>
-                    <div class="cartao__conteudo__resposta">
-                        <p>Lisboa</p>
-                    </div>
-                </div>
-            </article>
-             <article class="cartao">
-                <div class="cartao__conteudo">
-                    <h3>Geografia</h3>
-                    <div class="cartao__conteudo__pergunta">
-                        <p>Qual a capital da Bélgica</p>
-                    </div>
-                    <div class="cartao__conteudo__resposta">
-                        <p>Bruxelas</p>
-                    </div>
-                </div>
-            </article>
+           
         </section>
     </main>
 
     <footer>
         <p>Projeto desenvolvido por Kamyla e Priscila</p>
     </footer>
+    <script src="perguntas.js"></script>
 </body>
 
 </html>
