--- a/index.html
+++ b/index.html
@@ -30,7 +30,9 @@
     <footer>
         <p>Projeto desenvolvido por Kamyla e Priscila</p>
     </footer>
+    <script src="app.js"></script>
     <script src="perguntas.js"></script>
+
 </body>
 
 </html>
