--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <main>
-        <section id="container">
+        <!--- <section id="container">
             <article class="cartao">
                 <div class="cartao__conteudo">
                     <h3>Ciências</h3>
@@ -21,7 +21,7 @@
                         <p>Verão</p>
                     </div>
                 </div>
-                 </article>
+                 </article> -->
                  
            
         </section>
